--- a/index.html
+++ b/index.html
@@ -7,9 +7,25 @@
     <title>장하영</title>
     <link rel="stylesheet" href="./reset.css">
     <style>
-        body{text-align: center;}
+        @font-face {
+            font-family: 'TTHakgyoansimUndongjangL';
+            src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2402_keris@1.0/TTHakgyoansimUndongjangL.woff2') format('woff2');
+            font-weight: 300;
+            font-style: normal;
+        }
+
+        * {
+            font-family: 'TTHakgyoansimUndongjangL';
+        }
+
+        body {
+            text-align: center;
+            background-color: #007172;
+        }
+
         h1 {
-            margin: 20px;
+            margin: 30px;
+            color: #F29325;
         }
 
         ul {
@@ -17,13 +33,36 @@
             margin: auto;
             text-align: center;
             border-radius: 15px;
-            border: 1px solid #000;
+            background-color: #F4E2DE;
+            padding: 30px 0px;
         }
 
-        li{
-            padding: 10px;
-            font-size: 16px;
+        li {
+
+            font-size: 17px;
             font-weight: 700;
+        }
+
+        a {
+            display: block;
+            padding: 15px;
+            color: #D94F04;
+        }
+
+        a:hover {
+            color: #025259;
+            text-decoration: underline;
+        }
+
+        span {
+            color: #025259;
+        }
+
+        p {
+            display: inline-block;
+            text-align: left;
+            margin: 30px;
+            color: #F29325;
         }
     </style>
 </head>
@@ -31,17 +70,18 @@
 <body>
     <h1>장하영 작업완료 파일 목록</h1>
     <ul>
-        <li><a href="./240131-popmart/index.html">240131 팝마트</a></li>
-        <li><a href="./240216-NoPlasticSunday/index.html">240216 노플라스틱선데이</a></li>
-        <li><a href="./240220-LUSH/index.html">240220 러쉬</a></li>
-        <li><a href="./240229-espoir/">240229 에스쁘어</a></li>
-        <li><a href=""></a></li>
-        <li><a href=""></a></li>
-        <li><a href=""></a></li>
-        <li><a href=""></a></li>
-        <li><a href=""></a></li>
-        <li><a href=""></a></li>
+        <li><a href="./240129-maeil/index.html"><span>240129</span> 메일유업</a></li>
+        <li><a href="./240131-popmart/index.html"><span>240131</span> 팝마트</a></li>
+        <li><a href="./240216-NoPlasticSunday/index.html"><span>240216</span> 노플라스틱선데이</a></li>
+        <li><a href="./240220-LUSH/index.html"><span>240220</span> 러쉬</a></li>
+        <li><a href="./240221-Yes24/index.html"><span>240221</span> 예스24 클론코딩</a></li>
+        <li><a href="./240229-espoir/"><span>240229</span> 에스쁘어</a></li>
     </ul>
+    <p>
+        Everything will be fine.<br />
+        0:10 ───*̥❄︎‧˚───────────── 4:01<br />
+        ⇆ ◁ ❚❚ ▷ ↻
+    </p>
 </body>
 
 </html>
