--- a/index.html
+++ b/index.html
@@ -75,6 +75,7 @@
         <li><a href="./240216-NoPlasticSunday/index.html"><span>240216</span> 노플라스틱선데이</a></li>
         <li><a href="./240220-LUSH/index.html"><span>240220</span> 러쉬</a></li>
         <li><a href="./240221-Yes24/index.html"><span>240221</span> 예스24 클론코딩</a></li>
+        <li><a href="./240229-espoir/"><span>240228</span> 위메프오 클론코딩</a></li>
         <li><a href="./240229-espoir/"><span>240229</span> 에스쁘어</a></li>
     </ul>
     <p>
