--- a/index.html
+++ b/index.html
@@ -23,14 +23,23 @@
             background-color: #007172;
         }
 
+        section{
+            width: 100%;
+            height: 100vh;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+        }
+
         h1 {
             margin: 30px;
+            font-size: 40px;
             color: #F29325;
         }
 
         ul {
             width: 50%;
-            margin: auto;
             text-align: center;
             border-radius: 15px;
             background-color: #F4E2DE;
@@ -62,27 +71,32 @@
             display: inline-block;
             text-align: left;
             margin: 30px;
+            font-size: 20px;
             color: #F29325;
         }
     </style>
 </head>
 
 <body>
-    <h1>장하영 작업완료 파일 목록</h1>
-    <ul>
-        <li><a href="./240129-maeil/index.html"><span>240129</span> 메일유업</a></li>
-        <li><a href="./240131-popmart/index.html"><span>240131</span> 팝마트</a></li>
-        <li><a href="./240216-NoPlasticSunday/index.html"><span>240216</span> 노플라스틱선데이</a></li>
-        <li><a href="./240220-LUSH/index.html"><span>240220</span> 러쉬</a></li>
-        <li><a href="./240221-Yes24/index.html"><span>240221</span> 예스24 클론코딩</a></li>
-        <li><a href="./240228-wmpo/index.html"><span>240228</span> 위메프오 클론코딩</a></li>
-        <li><a href="./240229-espoir/index.html"><span>240229</span> 에스쁘어</a></li>
-    </ul>
-    <p>
-        Everything will be fine.<br />
-        0:10 ───*̥❄︎‧˚───────────── 4:01<br />
-        ⇆ ◁ ❚❚ ▷ ↻
-    </p>
+    <section>
+        <h1>장하영 작업완료 파일 목록</h1>
+        <ul>
+            <li><a href="./240129-maeil/index.html"><span>231214</span> 빽다방</a></li>
+            <li><a href="./240129-maeil/index.html"><span>240116</span> 엘카페 클론코딩</a></li>
+            <li><a href="./240129-maeil/index.html"><span>240129</span> 메일유업</a></li>
+            <li><a href="./240131-popmart/index.html"><span>240131</span> 팝마트</a></li>
+            <li><a href="./240216-NoPlasticSunday/index.html"><span>240216</span> 노플라스틱선데이</a></li>
+            <li><a href="./240220-LUSH/index.html"><span>240220</span> 러쉬</a></li>
+            <li><a href="./240221-Yes24/index.html"><span>240221</span> 예스24 클론코딩</a></li>
+            <li><a href="./240228-wmpo/index.html"><span>240228</span> 위메프오 클론코딩</a></li>
+            <li><a href="./240229-espoir/index.html"><span>240229</span> 에스쁘어</a></li>
+        </ul>
+        <p>
+            Everything will be fine.<br />
+            0:10 ───*̥❄︎‧˚───────────── 4:01<br />
+            ⇆ ◁ ❚❚ ▷ ↻
+        </p>
+    </section>
 </body>
 
 </html>
