--- a/index.html
+++ b/index.html
@@ -44,10 +44,15 @@
             border-radius: 15px;
             background-color: #F4E2DE;
             padding: 30px 0px;
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: center;
+            align-items: center;
+            gap: 20px;
         }
 
         li {
-
+            width: 40%;
             font-size: 17px;
             font-weight: 700;
         }
@@ -83,6 +88,7 @@
         <ul>
             <li><a href="./231214-paikdabang/index.html"><span>231214</span> 빽다방</a></li>
             <li><a href="./240116-elcafe/index.html"><span>240116</span> 엘카페 클론코딩</a></li>
+            <li><a href="./240122-mugobox/index.html"><span>240122</span> 뮤고박스 클론코딩</a></li>
             <li><a href="./240126-woodam/index.html"><span>240126</span> 우담라이팅 클론코딩</a></li>
             <li><a href="./240129-maeil/index.html"><span>240129</span> 메일유업</a></li>
             <li><a href="./240131-popmart/index.html"><span>240131</span> 팝마트</a></li>
@@ -93,6 +99,8 @@
             <li><a href="./240229-espoir/index.html"><span>240229</span> 에스쁘어</a></li>
             <li><a href="./240325-monami/index.html"><span>240325</span> 모나미</a></li>
             <li><a href="./240326-oneroom/index.html"><span>240326</span> 원룸만들기</a></li>
+            <li><a href="./240328-JejuBeer/index.html"><span>240328</span> 제주맥주</a></li>
+            <li><a href="./240401-10x10/index.html"><span>240401</span> 텐바이텐 클론코딩</a></li>
         </ul>
         <p>
             Everything will be fine.<br />
