--- a/index.html
+++ b/index.html
@@ -87,6 +87,7 @@
         <h1>장하영 작업완료 파일 목록</h1>
         <ul>
             <li><a href="./231214-paikdabang/index.html"><span>231214</span> 빽다방</a></li>
+            <li><a href="./240115-pizza/index.html"><span>240115</span> 도미노 피자</a></li>
             <li><a href="./240116-elcafe/index.html"><span>240116</span> 엘카페 클론코딩</a></li>
             <li><a href="./240122-mugobox/index.html"><span>240122</span> 뮤고박스 클론코딩</a></li>
             <li><a href="./240126-woodam/index.html"><span>240126</span> 우담라이팅 클론코딩</a></li>
