--- a/index.html
+++ b/index.html
@@ -92,6 +92,7 @@
             <li><a href="./240122-mugobox/index.html"><span>240122</span> 뮤고박스 클론코딩</a></li>
             <li><a href="./240126-woodam/index.html"><span>240126</span> 우담라이팅 클론코딩</a></li>
             <li><a href="./240129-maeil/index.html"><span>240129</span> 메일유업</a></li>
+            <li><a href="./240130-7star/index.html"><span>240130</span> 롯데칠성</a></li>
             <li><a href="./240131-popmart/index.html"><span>240131</span> 팝마트</a></li>
             <li><a href="./240216-NoPlasticSunday/index.html"><span>240216</span> 노플라스틱선데이</a></li>
             <li><a href="./240220-LUSH/index.html"><span>240220</span> 러쉬</a></li>
