작업완료 목록

--- a/index.html
+++ b/index.html
@@ -104,6 +104,8 @@
             <li><a href="./240326-oneroom/index.html"><span>240326</span> 원룸만들기</a></li>
             <li><a href="./240328-JejuBeer/index.html"><span>240328</span> 제주맥주</a></li>
             <li><a href="./240401-10x10/index.html"><span>240401</span> 텐바이텐 클론코딩</a></li>
+            <li><a href="./240321-frog/index.html"><span>240321</span> 개골개골 디자인 프로세스</a></li>
+            <li><a href="./240502-yeogi/index.html"><span>240502</span> 여기어때 디자인 프로세스</a></li>
         </ul>
         <p>
             Everything will be fine.<br />
