--- a/240321-frog/index.html
+++ b/240321-frog/index.html
@@ -26,18 +26,18 @@
         <h1>User Research</h1>
         <ul>
             <li>
-                <p><span>주위에서 하라고 말해야 겨우 하는 스타일</span>인데,<br />
+                <p><span>주위에서 하라고 말해야 겨우 하는 스타일</span>인데,
                     시험공부를 하려고 해도 게을러서 스스로 하지 않아요.</p>
             </li>
             <li>
                 <p>
-                    2024년이 되어 새해목표를 세웠는데, <br />
+                    2024년이 되어 새해목표를 세웠는데,
                     <span>작심삼일</span>이라는 말처럼 목표를 오래 이어가기가 너무 힘들어요.
                 </p>
             </li>
             <li>
                 <p>
-                    기존에 있는 앱은 <span>목표 설정에도 제한</span>이 있고, <br />
+                    기존에 있는 앱은 <span>목표 설정에도 제한</span>이 있고,
                     무엇보다 간편하게 <span>달성률 같은 것을 볼 수 없어 뿌듯함이 없어요.</span>
                 </p>
             </li>
@@ -48,43 +48,45 @@
             <h2>AS IS</h2>
             <h2>TO BE</h2>
         </div>
-        <ul class="text1">
-            <li>
-                <p>혼자서는 목표<br /> 달성이 어려움</p>
-            </li>
-            <li>
-                <p>작심삼일</p>
-            </li>
-            <li>
-                <p>달성한 목표의 <br />통계 미흡</p>
-            </li>
-        </ul>
-        <ul class="text2">
-            <li>
-                <p>여럿이서 <span>하나의 목표</span><br />를 달성할 수 있도록 하기</p>
-            </li>
-            <li>
-                <p>앱 자체에<br /> <span>동기부여</span> 요소 추가</p>
-            </li>
-            <li>
-                <p>여러 버젼의<br /><span>통계</span> 추가</p>
-            </li>
-        </ul>
-        <ul class="text3">
-            <li>
-                <p>서로의 달성률 확인 가능, <br />
-                    격려와 독촉 가능</p>
-            </li>
-            <li>
-                <p>도전과제, 랭킹 시스템 등 <br />
-                    게임적 요소 추가</p>
-            </li>
-            <li>
-                <p>원하는대로 볼 수 있는 <br />
-                    통계 시스템으로 <br />
-                    추후 의욕 증대</p>
-            </li>
-        </ul>
+        <div class="wrap">
+            <ul class="text1">
+                <li>
+                    <p>혼자서는 목표<br /> 달성이 어려움</p>
+                </li>
+                <li>
+                    <p>작심삼일</p>
+                </li>
+                <li>
+                    <p>달성한 목표의 <br />통계 미흡</p>
+                </li>
+            </ul>
+            <ul class="text2">
+                <li>
+                    <p>여럿이서 <span>하나의 목표</span>를 달성할 수 있도록 하기</p>
+                </li>
+                <li>
+                    <p>앱 자체에 <span>동기부여</span> 요소 추가</p>
+                </li>
+                <li>
+                    <p>여러 버젼의 <span>통계</span> 추가</p>
+                </li>
+            </ul>
+            <ul class="text3">
+                <li>
+                    <p>서로의 달성률 확인 가능,
+                        격려와 독촉 가능</p>
+                </li>
+                <li>
+                    <p>도전과제, 랭킹 시스템 등 
+                        게임적 요소 추가</p>
+                </li>
+                <li>
+                    <p>원하는대로 볼 수 있는 
+                        통계 시스템으로 
+                        추후 의욕 증대</p>
+                </li>
+            </ul>
+        </div>
     </section>
     <section id="sec3">
         <h1>Approach</h1>
@@ -104,15 +106,15 @@
             </ul>
             <ul class="text2">
                 <li>
-                    <p>다수와 성취를 나누는 것으로<br />
+                    <p>다수와 성취를 나누는 것으로
                         목표에 대한 동기를 부여</p>
                 </li>
                 <li>
-                    <p>도전과제와 랭킹 시스템 등으로<br />
+                    <p>도전과제와 랭킹 시스템 등으로
                         지속적인 동기 부여</p>
                 </li>
                 <li>
-                    <p>한눈에 볼 수 있는 통계 시스템,<br />
+                    <p>한눈에 볼 수 있는 통계 시스템,
                         달성률 종류별로 확인 가능</p>
                 </li>
             </ul>
