--- a/240321-frog/index.html
+++ b/240321-frog/index.html
@@ -121,9 +121,17 @@
         </div>
     </section>
     <section id="sec4">
-        <h2>#여럿이 함께</h2>
-        <h2>#도전과제</h2>
-        <h2>#통계 시스템</h2>
+        <h1>Keyword</h1>
+        <div class="wrap">
+            <div class="key">
+                <h2>개골개골</h2>
+            </div>
+            <ul>
+                <li>여럿이 함께</li>
+                <li>도전과제</li>
+                <li>통계 시스템</li>
+            </ul>
+        </div>
     </section>
     <section id="sec5">
         <h1>Persona</h1>
@@ -132,16 +140,11 @@
                 <h2>신아라</h2>
                 <span>22세 | 여성</span>
                 <div class="per">
-                    <h3>BIO</h3>
                     <p>대학생인 아라씨는 한참 바쁜 시기입니다. 과제에 각종 조별과제, 거기에 시험까지. 지루한 공부, 어차피 해야 한다면 조금 더 즐겁게 할 수 없을까? 아라씨는 동기들과 함께
                         시험 공부
                         계획을 체계적으로 세우고 싶어합니다.</p>
                 </div>
-                <div class="per">
-                    <h3>Grievance</h3>
-                    <p>목표 설정 앱은 보통 혼자 하는 앱인 경우가 많음.</p>
-                </div>
-                <div class="per">
+                <div class="per needs">
                     <h3>Needs</h3>
                     <p>다수가 한 목표를 동시에 설정하고, 서로의 달성률 등을 확인할 수 있는 기능</p>
                 </div>
@@ -150,17 +153,11 @@
                 <h2>이한빈</h2>
                 <span>28세 | 남성</span>
                 <div class="per">
-                    <h3>BIO</h3>
                     <p>게임을 좋아하는 한 번씩은 직장인입니다. 자기 계발을 위해 두 달 정도 기간을 길게 잡아서 하루하루 목표를 설정하고 싶어 합니다. 하지만 대부분의 목표 설정 앱은 한 달씩
                         나누어져
                         있고, 단순하게 목표를 설정하고 체크만 할 수 있어 어쩐지 의욕이 나지 않습니다.</p>
                 </div>
-                <div class="per">
-                    <h3>Grievance</h3>
-                    <p>성취 의욕을 끌어올릴 수 있는 기능
-                        목표 기간을 자유롭게 설정 가능한 앱</p>
-                </div>
-                <div class="per">
+                <div class="per needs">
                     <h3>Needs</h3>
                     <p>목표 기간을 자유롭게 설정 가능하고,
                         도전과제, 랭킹 등으로 승부욕, 수집욕구 등으로 게임처럼
@@ -170,21 +167,17 @@
         </div>
     </section>
     <section id="sec6">
-        <h1>Goal Map</h1>
-        <img src="./img/Frame 92 (1).png" alt="">
+        <h1>Journey Map</h1>
+        <img src="./img/goal map.png" alt="">
     </section>
     <section id="sec7">
         <h1>Project Benchmarking</h1>
         <div class="inner">
             <ul>
-                <li class="title">
-                    <div class="box">장점</div>
-                    <div class="box">단점</div>
-                </li>
                 <li>
                     <h2>꾸주니</h2>
                     <div class="box box1">
-                        <p>심플하고 직관적인 인터페이스<br />
+                        <p>심플하고 직관적인 인터페이스 
                             기능이 간단하고 필요한 것만 존재함.</p>
                     </div>
                     <div class="box box2">
@@ -197,7 +190,7 @@
                 <li>
                     <h2>진지한 포도</h2>
                     <div class="box box1">
-                        <p>칭찬 스티커라는 제품 아이디어를<br />
+                        <p>칭찬 스티커라는 제품 아이디어를 
                             어플리케이션으로 잘 구현했다.</p>
                     </div>
                     <div class="box box2">
@@ -307,14 +300,6 @@
         <p>보면 볼수록 매력이 넘치는 개구리! <br/>
             간단하면서도 귀여워 보일 수 있도록 디자인하였습니다.</p>
     </section>
-    <div class="subtract">
-        <img src="./img/Subtract-01.png" alt="">
-        <img src="./img/Subtract-02.png" alt="">
-        <img src="./img/Subtract-03.png" alt="">
-        <img src="./img/Subtract-04.png" alt="">
-        <img src="./img/Subtract-05.png" alt="">
-        <img src="./img/Subtract-06.png" alt="">
-    </div>
     <footer>
         <h2>본격 동기부여 프로젝트</h2>
         <p>갓생살기, 당신도 가능하다!</p>
