--- a/240321-frog/index.html
+++ b/240321-frog/index.html
@@ -77,12 +77,12 @@
                         격려와 독촉 가능</p>
                 </li>
                 <li>
-                    <p>도전과제, 랭킹 시스템 등 
+                    <p>도전과제, 랭킹 시스템 등
                         게임적 요소 추가</p>
                 </li>
                 <li>
-                    <p>원하는대로 볼 수 있는 
-                        통계 시스템으로 
+                    <p>원하는대로 볼 수 있는
+                        통계 시스템으로
                         추후 의욕 증대</p>
                 </li>
             </ul>
@@ -177,7 +177,7 @@
                 <li>
                     <h2>꾸주니</h2>
                     <div class="box box1">
-                        <p>심플하고 직관적인 인터페이스 
+                        <p>심플하고 직관적인 인터페이스
                             기능이 간단하고 필요한 것만 존재함.</p>
                     </div>
                     <div class="box box2">
@@ -190,7 +190,7 @@
                 <li>
                     <h2>진지한 포도</h2>
                     <div class="box box1">
-                        <p>칭찬 스티커라는 제품 아이디어를 
+                        <p>칭찬 스티커라는 제품 아이디어를
                             어플리케이션으로 잘 구현했다.</p>
                     </div>
                     <div class="box box2">
@@ -214,25 +214,18 @@
         </div>
     </section>
     <section id="sec8">
-        <div class="title">
-            <h1>Main Target</h1>
-            <h1>Sub Target</h1>
-        </div>
+        <h1>Main Target</h1>
+        <h1>Sub Target</h1>
         <div class="inner">
             <div class="box">
-                <p>10-30대까지 <br />
+                <p>10-30대까지<br />
                     다양한 연령대의 개인</p>
             </div>
             <div class="box">
-                <p>친구들과 특별하고 유익한<br />
+                <p>친구들과 특별하고 유익한
                     경험을 쌓고자 하는 단체</p>
             </div>
         </div>
-    </section>
-    <section id="sec16">
-        <div class="back1"></div>
-        <img src="./img/Group.png" alt="">
-        <div class="back2"></div>
     </section>
     <section id="sec9">
         <div class="app_text">
@@ -279,9 +272,20 @@
             <img src="./img/up04.svg" alt="">
         </div>
     </section>
+    <section id="sec12-1">
+        <h1>[ STYLE GUIDE ]</h1>
+    </section>
     <section id="sec13">
-        <img src="./img/color.png" alt="">
-        <ul>
+        <h1>Color</h1>
+        <ul class="color">
+            <li>1</li>
+            <li>2</li>
+            <li>3</li>
+            <li>4</li>
+            <li>5</li>
+            <li>6</li>
+        </ul>
+        <ul class="text">
             <li>#668A6B</li>
             <li>#006543</li>
             <li>#FDFBD8</li>
@@ -291,14 +295,25 @@
         </ul>
     </section>
     <section id="sec14">
-        <img src="./img/font.png" alt="">
-        <p>‘개구리’라는 애플리케이션 컨셉에 맞추어 곡선을 사용하여 각진 느낌보다는 둥근 느낌이 강한 서체를 선택하였습니다. 동시에 자주 체크를 해야 한다는 애플리케이션의 특징에 맞추어 눈의 피로도를 줄이기
-            위해 가독성을 위한 폰트도 채택하였습니다.</p>
+        <h1>Font</h1>
+        <div class="wrap">
+            <img src="./img/font.png" alt="">
+            <p>‘개구리’라는 애플리케이션 컨셉에 맞추어 곡선을 사용하여 각진 느낌보다는 둥근 느낌이 강한 서체를 선택하였습니다. 동시에 자주 체크를 해야 한다는 애플리케이션의 특징에 맞추어 눈의 피로도를
+                줄이기
+                위해 가독성을 위한 폰트도 채택하였습니다.</p>
+            <img src="./img/font2.png" alt="">
+        </div>
     </section>
     <section id="sec15">
+        <h1>Character</h1>
         <img src="./img/frog.png" alt="">
-        <p>보면 볼수록 매력이 넘치는 개구리! <br/>
+        <p>보면 볼수록 매력이 넘치는 개구리! <br />
             간단하면서도 귀여워 보일 수 있도록 디자인하였습니다.</p>
+    </section>
+    <section id="sec16">
+        <div class="back1"></div>
+        <img src="./img/Group.png" alt="">
+        <div class="back2"></div>
     </section>
     <footer>
         <h2>본격 동기부여 프로젝트</h2>
