--- a/240321-frog/index.html
+++ b/240321-frog/index.html
@@ -315,6 +315,15 @@
         <img src="./img/Group.png" alt="">
         <div class="back2"></div>
     </section>
+    <section id="sec17">
+        <h1>Review</h1>
+        <div>
+            <p>저희 프로젝트 이름 '개골개골'은 유치하게 보일 수 있지만, 요즘 많은 애플리케이션 중 한 번이라도 웃음을 주길 바랐습니다. 애플리케이션 기획은 처음이어서, 막연한 아이디어를 구체화할 기회를 기대했습니다.</p>
+            <p>가장 어려웠던 점은 팀원들 간의 의견 차이였습니다. 특히 스마트폰 기종에 따른 차이로 결과물이 달라질 수 있음을 깨달았습니다.</p>
+            <p>애플리케이션에는 다양한 기능이 필요하다는 점이 인상 깊었습니다. 단순한 동작을 구현하는 데에도 여러 부가적인 기능이 필요하다는 것을 알게 되었고, 이는 사용자의 편의와 직결된다는 점을 배웠습니다. 이번 프로젝트는 다른 관점에서 생각해 볼 수 있는 귀중한 기회였습니다. 전체적으로 매우 유익한 경험이었습니다.</p>
+            <p>애플리케이션의 디자인과 구성, 그리고 원하는 기능을 화면에서 어떻게 표현할 것인가를 고민하면서 많은 것을 배웠습니다. 전체적으로 매우 유익한 프로젝트 경험이었습니다.</p>
+        </div>
+    </section>
     <footer>
         <h2>본격 동기부여 프로젝트</h2>
         <p>갓생살기, 당신도 가능하다!</p>
