--- a/240502-yeogi/index.html
+++ b/240502-yeogi/index.html
@@ -57,74 +57,73 @@
     <section id="sec4">
         <h1>Approach</h1>
         <ul>
+            <li>추가/변경</li>
             <li>
-                <p>최근 본 이력을 <span>사이드바</span>에서 확인 가능하게 기능 추가</p>
+                <p>즐겨찾기 기능</p>
             </li>
             <li>
-                <p><span>지역별 카테고리</span>를 상단의 메뉴에서 확인할 수있도록 변경</p>
+                <p>최근 본 이력</p>
             </li>
             <li>
-                <p><span>즐겨찾기 기능</span> 추가</p>
+                <p>전환 가능한 여행지 탭</p>
+            </li>
+        </ul>
+        <ul>
+            <li>삭제</li>
+            <li>
+                <p>이벤트 메뉴</p>
             </li>
             <li>
-                <p>상단의 메뉴에서 <span>이벤트 메뉴 삭제</span> / 이벤트 <span>배너 크기 조정</span></p>
+                <p>인기검색순위</p>
             </li>
             <li>
-                <p>국내 숙소 검색 창의 <span>인기 검색 순위 삭제</span></p>
-            </li>
-            <li>
-                <p>국내 인기 여행지와 해외 인기 여행지 탭을 하나로 합친 후,
-                    버튼을 이용하여 <span>전환 가능하게 변경</span></p>
+                <p>지역별 카테고리</p>
             </li>
         </ul>
     </section>
     <section id="sec8">
-        <div class="target">
-            <h2>Main Target</h2>
-            <p>취미가 여행인 사람들<br />
-                타지역에 자주 머무르는 사람들</p>
-        </div>
-        <div class="target">
-            <h2>Sub Target</h2>
-            <p>여행 주기가 1년 이상인 사람들</p>
+        <h1>Main Target</h1>
+        <h1>Sub Target</h1>
+        <div class="inner">
+            <div class="box">
+                <p>10-30대까지
+                    다양한 연령대의 개인</p>
+            </div>
+            <div class="box">
+                <p>친구들과 특별하고 유익한
+                    경험을 쌓고자 하는 단체</p>
+            </div>
         </div>
     </section>
     <section id="sec5">
         <h1>Persona</h1>
         <div class="persona_wrap">
             <div class="persona per1">
-                <h2>서진석</h2>
-                <span>35세 | 남성</span>
+                <h2>신아라</h2>
+                <span>22세 | 여성</span>
                 <div class="per">
-                    <h3>BIO</h3>
-                    <p>서울에 사는 영업사원 2년 차 진석 씨는 일주일에 한 번씩은 타지역으로 영업을 위해 출장을 갑니다. 적당한 가격에 깨끗한 숙소를 찾기 위해 여러 숙소를 확인해 봤는데 기록이
-                        남지 않아 마음에 들었던 숙소 정보를 다시 찾는 것에 어려움을 느낍니다. 즐겨찾기 기능과 최근 기록 정보 기능의부재에 아쉬움을 가지고 있습니다.</p>
+                    <p>대학생인 아라씨는 한참 바쁜 시기입니다. 과제에 각종 조별과제, 거기에 시험까지. 지루한 공부, 어차피 해야 한다면 조금 더 즐겁게 할 수 없을까? 아라씨는 동기들과 함께
+                        시험 공부
+                        계획을 체계적으로 세우고 싶어합니다.</p>
                 </div>
-                <div class="per">
-                    <h3>Grievance</h3>
-                    <p>최근 기록을 확인할 수 없음, 자주 찾는 숙소의 확인이 불가능</p>
-                </div>
-                <div class="per">
+                <div class="per needs">
                     <h3>Needs</h3>
-                    <p>즐겨찾기 기능</p>
+                    <p>다수가 한 목표를 동시에 설정하고, 서로의 달성률 등을 확인할 수 있는 기능</p>
                 </div>
             </div>
             <div class="persona per2">
-                <h2>김한나</h2>
-                <span>28세 | 여성</span>
+                <h2>이한빈</h2>
+                <span>28세 | 남성</span>
                 <div class="per">
-                    <h3>BIO</h3>
-                    <p>김한나 씨는 여행 경험을 글로 써 책을 출판하는 여행작가입니다. 직업 특성상 여행지와 가까우면서 글을 쓸 수 있는 환경이 마련되어 있는 숙소를 쉽게 예약하고 싶은데, 숙소들을
-                        하나하나 비교하고 있으니 영 불편하기만 합니다. '여기어때'가 깔끔하고 보기 편안한 사이트인 것은 알고 있지만, 여러 편의 기능이 부족한 것도 사실입니다. 한나 씨는 해당
-                        부분이 개선되었으면 하는 바람이 있습니다.</p>
+                    <p>게임을 좋아하는 한 번씩은 직장인입니다. 자기 계발을 위해 두 달 정도 기간을 길게 잡아서 하루하루 목표를 설정하고 싶어 합니다. 하지만 대부분의 목표 설정 앱은 한 달씩
+                        나누어져
+                        있고, 단순하게 목표를 설정하고 체크만 할 수 있어 어쩐지 의욕이 나지 않습니다.</p>
                 </div>
-                <div class="per">
-                    <h3>Grievance</h3>
-                    <p>숙소의 비교가 어려움</p>
-                </div>
-                <div class="per">
+                <div class="per needs">
                     <h3>Needs</h3>
-                    <p>숙소나 방 등을 하나 고정하고 다른 숙소를 비교할 수 있는 기능</p>
+                    <p>목표 기간을 자유롭게 설정 가능하고,
+                        도전과제, 랭킹 등으로 승부욕, 수집욕구 등으로 게임처럼
+                        의욕을 끌어올릴 수 있는 기능</p>
                 </div>
             </div>
         </div>
@@ -154,8 +153,8 @@
     </section>
     <section id="sec9">
         <div class="app_text">
-            <h1><span>01</span>한눈에 볼 수 있는<br />
-                검색 페이지</h1>
+            <h2><span>01</span>한눈에 볼 수 있는<br />
+                검색 페이지</h2>
             <p>무작정 길기만 한 스크롤 페이지, 한번 보고 나면 잊어버리는 이력들. 최근 본 이력 탭으로 이전에 확인한 숙소들을 빠르게 찾아갈 수 있습니다. 개선된 필터 설정 탭으로 인해 보다 쉽게 검색
                 필터를 적용할 수 있습니다.</p>
         </div>
@@ -165,7 +164,7 @@
     </section>
     <section id="sec10">
         <div class="app_text">
-            <h1><span>02</span>찜목록으로 <br />편리하게</h1>
+            <h2><span>02</span>찜목록으로 <br />편리하게</h2>
             <p>같은 지역을 여러 번 방문할 때 유용한 찜 목록 기능으로 좋았던 숙소들을 두고두고 저장해둘 수 있습니다.</p>
         </div>
         <div class="app_img">
@@ -174,20 +173,23 @@
     </section>
     <section id="sec11">
         <div class="app_text">
-            <h1><span>03</span>한눈에<br />
-                특가 확인하기</h1>
+            <h2><span>03</span>한눈에<br />
+                특가 확인하기</h2>
             <p>나열되어 있기만 했던 특가 목록을 보다 빠르게 확인할 수 있습니다. 원하는 키워드만을 확인하는 것도 가능합니다.</p>
         </div>
         <div class="app_img">
             <img src="./img/up03.png" alt="">
         </div>
     </section>
+    <section id="sec12">
+        <h2>[ Style Guide ]</h2>
+    </section>
     <section id="sec13">
-        <h1>Style Guide [ Color ]</h1>
+        <h1>Color</h1>
         <img src="./img/color.png" alt="">
     </section>
     <section id="sec14">
-        <h1>Style Guide [ Font ]</h1>
+        <h1>Font</h1>
         <ul>
             <li>
                 <h2>여기어때 잘난체</h2>
@@ -205,10 +207,10 @@
         </ul>
     </section>
     <section id="sec15">
-        <h1>Style Guide [ Logo ]</h1>
+        <h1>Logo</h1>
         <img src="./img/logo.png" alt="">
         <p>‘여기어때’라는 브랜드명을 명확하고 간결하게 표현한 로고입니다. 자체적으로 개발한 여기어때 잘난체를 변형한 형태로, 글자를 가로로 나열하여 모던함을 강조시켰습니다.</p>
-        <p>본 프로젝트의 목적은 브랜드의 사용자를 늘리기 위함이기 때문에 사용자들에게 비교적 익숙한 기존의 로고를 변형하지 않고 그대로 사용하였습니다.  </p>
+        <p>본 프로젝트의 목적은 브랜드의 사용자를 늘리기 위함이기 때문에 사용자들에게 비교적 익숙한 기존의 로고를 변형하지 않고 그대로 사용하였습니다. </p>
     </section>
     <footer>
         <h2>최저가 국내숙소는 <a href="https://www.yeogi.com/" target="_blank">여기어때.</a></h2>
