--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         }
 
         ul {
-            width: 50%;
+            width: 80%;
             text-align: center;
             border-radius: 15px;
             background-color: #F4E2DE;
@@ -52,7 +52,7 @@
         }
 
         li {
-            width: 40%;
+            width: 30%;
             font-size: 17px;
             font-weight: 700;
         }
@@ -106,6 +106,7 @@
             <li><a href="./240401-10x10/index.html"><span>240401</span> 텐바이텐 클론코딩</a></li>
             <li><a href="./240321-frog/index.html"><span>240321</span> 개골개골 디자인 프로세스</a></li>
             <li><a href="./240502-yeogi/index.html"><span>240502</span> 여기어때 디자인 프로세스</a></li>
+            <li><a href="./240516-space/index.html"><span>240516</span> 포트폴리오 디자인 프로세스</a></li>
         </ul>
         <p>
             Everything will be fine.<br />
