--- a/240516-space/index.html
+++ b/240516-space/index.html
@@ -44,7 +44,6 @@
             </li>
         </ul>
     </section>
-    <section id="sec5"></section>
     <section id="sec6">
         <h2>[ CONCEPT ]</h2>
     </section>
@@ -70,8 +69,10 @@
         <h2>Font</h2>
         <div>
             <h3>KBO 다이아고딕체</h3>
-            <p>포인트를 줄 수 있는 요소가 포함되어 있으면서도 깔끔한 서체가 필요했습니다. 가독성 또한 중요한 요소였기 때문에 과하지 않은 디자인을 가지고 있으며, 다소 차가운 무드를 줄 수 있는 KBO
-                다이아고딕체를 사용하였습니다.</p>
+            <p>포인트를 줄 수 있는 요소가 포함되어 있으면서도 <b>깔끔한 서체</b>가 필요했습니다. 가독성 또한 중요한 요소였기 때문에 과하지 않은 디자인을 가지고 있으며, 다소 <span>
+                    차가운 무드를 줄 수 있는 </span> KBO
+                다이아고딕체
+                를 사용하였습니다.</p>
             <ul>
                 <li><span>Bold</span>우주를 닮은 포트폴리오</li>
                 <li><span>Medium</span>우주를 닮은 포트폴리오</li>
@@ -85,7 +86,7 @@
         </div>
         <div class="text">
             <h2>INTRO</h2>
-            <p>'우주'라는 컨셉이 가장 잘 드러나도록 표현하였습니다. 아이텐티티 슬로건과 자기소개 등을 심플하게 담았습니다.</p>
+            <p><b>'우주'</b>라는 컨셉이 가장 잘 드러나도록 표현하였습니다. 아이텐티티 슬로건과 자기소개 등을 심플하게 담았습니다.</p>
         </div>
     </section>
     <section id="sec11">
@@ -94,7 +95,7 @@
         </div>
         <div class="text">
             <h2>PROJECT</h2>
-            <p>개인 프로젝트와 팀 프로젝트를 한눈에 보기 쉽도록 탭 전환 요소를 사용하였습니다. 불필요한 요소들을 최대한 지우고 프로젝트에 집중할 수 있도록 하였습니다.</p>
+            <p><b>개인 프로젝트</b>와 <b>팀 프로젝트</b>를 한눈에 보기 쉽도록 탭 전환 요소를 사용하였습니다. 불필요한 요소들을 최대한 지우고 프로젝트에 집중할 수 있도록 하였습니다.</p>
         </div>
     </section>
     <section id="sec12">
@@ -103,7 +104,7 @@
         </div>
         <div class="text">
             <h2>WORK</h2>
-            <p>작업 목록을 동적으로 배치하였습니다. 상하, 또는 좌우로 움직이는 목록에 마우스 오버할 경우 상세한 설명이 나타나도록 하였습니다.</p>
+            <p><b>작업 목록</b>을 동적으로 배치하였습니다. 상하, 또는 좌우로 움직이는 목록에 마우스 오버할 경우 상세한 설명이 나타나도록 하였습니다.</p>
         </div>
     </section>
     <section id="sec13">
@@ -112,7 +113,7 @@
         </div>
         <div class="text">
             <h2>GRAPHIC</h2>
-            <p>'우주'라는 키워드가 두드러지도록 그래픽 작업물들을 동적으로 배치하였습니다. 그래픽에 마우스 오버할 경우 작업물이 강조되면서 해당 작업물의 이름이 등장합니다.</p>
+            <p><b>'우주'라는 키워드</b>가 두드러지도록 그래픽 작업물들을 동적으로 배치하였습니다. 그래픽에 마우스 오버할 경우 작업물이 강조되면서 해당 작업물의 이름이 등장합니다.</p>
         </div>
     </section>
     <section id="sec14">
@@ -121,7 +122,7 @@
         </div>
         <div class="text">
             <h2>ABOUT ME</h2>
-            <p>강조를 위하여 기존의 무채색 배경 대신 포인트 컬러를 배경색으로 사용하였습니다. 때문에 자연스럽게 해당 섹션이 이어지도록 추가로 요소를 배치하였습니다. 내용은 행성이 공전하듯이 기준을 잡고
+            <p>강조를 위하여 기존의 무채색 배경 대신 <b>포인트 컬러</b>를 배경색으로 사용하였습니다. 때문에 자연스럽게 해당 섹션이 이어지도록 추가로 요소를 배치하였습니다. 내용은 <b>행성이 공전하듯이</b> 기준을 잡고
                 360도, 가독성을 위하여 버튼으로 회전할 수 있도록 하였습니다.</p>
         </div>
     </section>
