--- a/index.html
+++ b/index.html
@@ -95,6 +95,7 @@
             <li><a href="./240129-maeil/index.html"><span>240129</span> 메일유업</a></li>
             <li><a href="./240130-7star/index.html"><span>240130</span> 롯데칠성</a></li>
             <li><a href="./240131-popmart/index.html"><span>240131</span> 팝마트</a></li>
+            <li><a href="./240213-Acebed/index.html"><span>240213</span> 에이스침대</a></li>
             <li><a href="./240216-NoPlasticSunday/index.html"><span>240216</span> 노플라스틱선데이</a></li>
             <li><a href="./240220-LUSH/index.html"><span>240220</span> 러쉬</a></li>
             <li><a href="./240221-Yes24/index.html"><span>240221</span> 예스24 클론코딩</a></li>
