작업완료 목록

--- a/index.html
+++ b/index.html
@@ -108,6 +108,7 @@
             <li><a href="./240321-frog/index.html"><span>240321</span> 개골개골 디자인 프로세스</a></li>
             <li><a href="./240502-yeogi/index.html"><span>240502</span> 여기어때 디자인 프로세스</a></li>
             <li><a href="./240516-space/index.html"><span>240516</span> 포트폴리오 디자인 프로세스</a></li>
+            <li><a href="./240517-symbol/index.html"><span>240517</span> 심볼 디자인 프로세스</a></li>
         </ul>
         <p>
             Everything will be fine.<br />
