--- a/index.html
+++ b/index.html
@@ -87,6 +87,7 @@
         <h1>장하영 작업완료 파일 목록</h1>
         <ul>
             <li><a href="./231201-cheongwadae/index.html"><span>231201</span> 청와대</a></li>
+            <li><a href="./231212-kakao/index.html"><span>231212</span> if-kakao</a></li>
             <li><a href="./231214-paikdabang/index.html"><span>231214</span> 빽다방</a></li>
             <li><a href="./240115-pizza/index.html"><span>240115</span> 도미노 피자</a></li>
             <li><a href="./240116-elcafe/index.html"><span>240116</span> 엘카페 클론코딩</a></li>
